tests/rosetta/out/Fortran/angle-difference-between-two-bearings-2.error
gfortran error: exit status 1
/workspace/mochi/tests/rosetta/out/Fortran/angle-difference-between-two-bearings-2.f90:8:132:

    8 |   testCases = reshape((/20,45,(0 - 45),45,(0 - 85),90,(0 - 95),90,(0 - 45),125,(0 - 45),145,29.4803,(0 - 88.6381),(0 - 78.3251),(0 - 159.036),(0 - 70099.74233810938),29840.67437876723,(0 - 165313.6666297357),33693.9894517456,1174.8380510598456,(0 - 154146.66490124757),60175.77306795546,42213.07192354373/),(/12,2/))
      |                                                                                                                                    1
Error: Line truncated at (1) [-Werror=line-truncation]
/workspace/mochi/tests/rosetta/out/Fortran/angle-difference-between-two-bearings-2.f90:8:132:

    8 |   testCases = reshape((/20,45,(0 - 45),45,(0 - 85),90,(0 - 95),90,(0 - 45),125,(0 - 45),145,29.4803,(0 - 88.6381),(0 - 78.3251),(0 - 159.036),(0 - 70099.74233810938),29840.67437876723,(0 - 165313.6666297357),33693.9894517456,1174.8380510598456,(0 - 154146.66490124757),60175.77306795546,42213.07192354373/),(/12,2/))
      |                                                                                                                                    1
Error: Syntax error in expression at (1)
/workspace/mochi/tests/rosetta/out/Fortran/angle-difference-between-two-bearings-2.f90:11:26:

   11 |     print *, angleDiff(tc(((0)+1)),tc(((1)+1)))
      |                          1
Error: Syntax error in argument list at (1)
/workspace/mochi/tests/rosetta/out/Fortran/angle-difference-between-two-bearings-2.f90:10:18:

   10 |     tc = testCases(i0)
      |                  1
Error: Rank mismatch in array reference at (1) (1/2)
/workspace/mochi/tests/rosetta/out/Fortran/angle-difference-between-two-bearings-2.f90:10:19:

    9 |   do i0 = 1, size(testCases)
      |                            2
   10 |     tc = testCases(i0)
      |                   1
Warning: Array reference at (1) out of bounds (24 > 12) in loop beginning at (2)
f951: some warnings being treated as errors
